--- a/status/tms-monitor.html
+++ b/status/tms-monitor.html
@@ -7,7 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link href="pulse.css" rel="stylesheet">
 </head>
-<body>
+<body class="disabled">
 <div class="container mt-3">
 
   <div class="row">
@@ -103,6 +103,11 @@
     let countdown = null;
 
     $("#data-container").hide();
+
+    document.addEventListener('contextmenu', event => {
+      event.preventDefault();
+    });
+
 
     socket.onopen = () => {
       console.log("Successfully connected");
